[gd_scene load_steps=12 format=4 uid="uid://bsg5e6i6vt7ve"]

[ext_resource type="Script" uid="uid://d2e1n6bs7jdv" path="res://scripts/game_provider.gd" id="1_gee14"]
[ext_resource type="TileSet" uid="uid://dguoagbsx5s5f" path="res://resources/maps/map1.tres" id="2_0tnpc"]
[ext_resource type="Script" uid="uid://bp8wugfx6tk0m" path="res://scripts/tiles/tile_controller.gd" id="3_vtaks"]
[ext_resource type="PackedScene" uid="uid://brovx3xt83ihl" path="res://scenes/enemies/spawner/spawner.tscn" id="4_kvpfn"]
[ext_resource type="Texture2D" uid="uid://d8lo4dccj3kb" path="res://assets/tiles/map1/tiles_debug.svg" id="5_dinhu"]
[ext_resource type="PackedScene" uid="uid://c3ftv6p6r1071" path="res://scenes/ui/gui/gui_root.tscn" id="6_kvuet"]
[ext_resource type="Script" uid="uid://bjwimbxges3e" path="res://scripts/ui/screen_menus/screen_menu_layer.gd" id="7_trtic"]
[ext_resource type="PackedScene" uid="uid://c7manlpxje4pd" path="res://scenes/ui/screen_menus/pause_menu.tscn" id="8_ir15t"]

[sub_resource type="TileSet" id="TileSet_tdg3v"]
tile_shape = 1
tile_layout = 1
tile_size = Vector2i(256, 256)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_42hvp"]
texture = ExtResource("5_dinhu")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_wuhgg"]
tile_size = Vector2i(256, 256)
sources/0 = SubResource("TileSetAtlasSource_42hvp")

[node name="Game" type="Node2D"]
script = ExtResource("1_gee14")

[node name="TileController" type="TileMapLayer" parent="." node_paths=PackedStringArray("arrow_tile_map")]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAABAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAgAAAAAAAAAAAACAAgAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAAgAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAOAAgAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAIAAAABAAAAAAAPAAEAAAAAAAAAAAAPAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAADAAAAAAAAAAAAAAACAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAIAAIAAAACAAAAAAABAAIAAAABAAAAAAACAAIAAAABAAAAAAADAAIAAAABAAAAAAAEAAIAAAABAAAAAAAFAAIAAAABAAAAAAAGAAIAAAABAAAAAAAHAAIAAAABAAAAAAAHAAEAAAABAAAAAAAJAAEAAAABAAAAAAAJAAIAAAABAAAAAAAKAAIAAAABAAAAAAALAAIAAAABAAAAAAAMAAIAAAABAAAAAAANAAIAAAABAAAAAAAOAAIAAAABAAAAAAABAAMAAAABAAAAAAABAAQAAAABAAAAAAACAAMAAAABAAAAAAACAAQAAAABAAAAAAACAAUAAAABAAAAAAACAAYAAAABAAAAAAABAAUAAAABAAAAAAABAAYAAAABAAAAAAADAAYAAAABAAAAAAAEAAYAAAABAAAAAAAFAAYAAAABAAAAAAAGAAYAAAABAAAAAAAHAAYAAAABAAAAAAAIAAYAAAABAAAAAAAJAAYAAAABAAAAAAAKAAYAAAABAAAAAAALAAYAAAABAAAAAAAMAAYAAAABAAAAAAANAAYAAAABAAAAAAAOAAYAAAABAAAAAAAOAAUAAAABAAAAAAAOAAQAAAABAAAAAAAOAAMAAAABAAAAAAANAAMAAAABAAAAAAANAAQAAAABAAAAAAANAAUAAAABAAAAAAAHAAMAAAABAAAAAAAJAAMAAAABAAAAAAABAAcAAAABAAAAAAACAAcAAAABAAAAAAADAAcAAAABAAAAAAAEAAcAAAABAAAAAAAFAAcAAAABAAAAAAAGAAcAAAABAAAAAAAHAAcAAAABAAAAAAAIAAcAAAABAAAAAAAJAAcAAAABAAAAAAAKAAcAAAABAAAAAAALAAcAAAABAAAAAAAMAAcAAAABAAAAAAANAAcAAAABAAAAAAAOAAcAAAABAAAAAAAMAAUAAAABAAAAAAALAAUAAAABAAAAAAAKAAUAAAABAAAAAAAJAAUAAAABAAAAAAAIAAUAAAABAAAAAAAHAAUAAAABAAAAAAAGAAUAAAABAAAAAAAFAAUAAAABAAAAAAAEAAUAAAABAAAAAAADAAUAAAABAAAAAAADAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAJAAQAAAAAAAAAAAAKAAQAAAAAAAAAAAALAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAMAAAAAAAAAAAALAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAADAAMAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAEAAAAAAAAAAAAMAAEAAAAAAAAAAAANAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAD//wgAAAACAAAAAAD//wkAAAACAAAAAAAAAAkAAAACAAAAAAABAAkAAAACAAAAAAACAAkAAAACAAAAAAADAAkAAAACAAAAAAAEAAkAAAACAAAAAAAFAAkAAAACAAAAAAAGAAkAAAACAAAAAAAHAAkAAAACAAAAAAAIAAkAAAACAAAAAAAJAAkAAAACAAAAAAAKAAkAAAACAAAAAAALAAkAAAACAAAAAAAMAAkAAAACAAAAAAANAAkAAAACAAAAAAAOAAkAAAACAAAAAAAPAAkAAAACAAAAAAAQAAkAAAACAAAAAAAQAAgAAAACAAAAAAAQAAcAAAACAAAAAAAQAAYAAAACAAAAAAAQAAUAAAACAAAAAAAQAAQAAAACAAAAAAAQAAMAAAACAAAAAAAQAAEAAAACAAAAAAAQAAAAAAACAAAAAAAQAP//AAACAAAAAAAPAP//AAACAAAAAAAOAP//AAACAAAAAAANAP//AAACAAAAAAAMAP//AAACAAAAAAALAP//AAACAAAAAAAKAP//AAACAAAAAAAJAP//AAACAAAAAAAIAP//AAACAAAAAAAHAP//AAACAAAAAAAGAP//AAACAAAAAAAFAP//AAACAAAAAAAEAP//AAACAAAAAAADAP//AAACAAAAAAACAP//AAACAAAAAAABAP//AAACAAAAAAAAAP//AAACAAAAAAD/////AAACAAAAAAD//wAAAAACAAAAAAD//wEAAAACAAAAAAD//wMAAAACAAAAAAD//wQAAAACAAAAAAD//wUAAAACAAAAAAD//wYAAAACAAAAAAD//wcAAAACAAAAAAD//wIAAAADAAAAAAAQAAIAAAAEAAAAAAAIAAMAAAABAAAAAAAIAAEAAAABAAAAAAANAA0AAAACAAAAAAAOAA0AAAACAAAAAAAPAA0AAAACAAAAAAAQAA0AAAACAAAAAAARAA0AAAACAAAAAAASAA0AAAACAAAAAAATAA0AAAACAAAAAAAUAA0AAAACAAAAAAAVAA0AAAACAAAAAAAWAA0AAAACAAAAAAAXAA0AAAACAAAAAAAYAA0AAAACAAAAAAAZAA0AAAACAAAAAAAaAA0AAAACAAAAAAAbAA0AAAACAAAAAAAcAA0AAAACAAAAAAAdAA0AAAACAAAAAAAeAA0AAAACAAAAAAAfAA0AAAACAAAAAAAgAA0AAAACAAAAAAAhAA0AAAACAAAAAAAiAA0AAAACAAAAAAAjAA0AAAACAAAAAAAkAA0AAAACAAAAAAAlAA0AAAACAAAAAAAmAA0AAAACAAAAAAAnAA0AAAACAAAAAAAoAA0AAAACAAAAAAApAA0AAAACAAAAAAAqAA0AAAACAAAAAAArAA0AAAACAAAAAAAsAA0AAAACAAAAAAAtAA0AAAACAAAAAAAuAA0AAAACAAAAAAAvAA0AAAACAAAAAAAwAA0AAAACAAAAAAAwAA4AAAACAAAAAAAwAA8AAAACAAAAAAAwABAAAAACAAAAAAAwABEAAAACAAAAAAAwABIAAAACAAAAAAAwABMAAAACAAAAAAAwABQAAAACAAAAAAAwABUAAAACAAAAAAAwABYAAAACAAAAAAAwABcAAAACAAAAAAAwABgAAAACAAAAAAAwABkAAAACAAAAAAAwABoAAAACAAAAAAAwABsAAAACAAAAAAAwABwAAAACAAAAAAAwAB0AAAACAAAAAAAwAB4AAAACAAAAAAAwAB8AAAACAAAAAAAwACAAAAACAAAAAAAwACEAAAACAAAAAAAwACIAAAACAAAAAAAvACIAAAAEAAAAAAAuACIAAAACAAAAAAAtACIAAAACAAAAAAAsACIAAAACAAAAAAArACIAAAACAAAAAAAqACIAAAACAAAAAAApACIAAAACAAAAAAAoACIAAAACAAAAAAAnACIAAAACAAAAAAAmACIAAAACAAAAAAAlACIAAAACAAAAAAAkACIAAAACAAAAAAAjACIAAAACAAAAAAAiACIAAAACAAAAAAAhACIAAAACAAAAAAAgACIAAAACAAAAAAAfACIAAAACAAAAAAAeACIAAAACAAAAAAAdACIAAAACAAAAAAAcACIAAAACAAAAAAAbACIAAAACAAAAAAAaACIAAAACAAAAAAAZACIAAAACAAAAAAAYACIAAAACAAAAAAAXACIAAAACAAAAAAAWACIAAAACAAAAAAAVACIAAAACAAAAAAAUACIAAAACAAAAAAATACIAAAACAAAAAAASACIAAAACAAAAAAARACIAAAACAAAAAAAQACIAAAACAAAAAAAPACIAAAACAAAAAAAOACIAAAACAAAAAAANACIAAAACAAAAAAAMACIAAAACAAAAAAAMACEAAAACAAAAAAAMACAAAAACAAAAAAAMAB8AAAACAAAAAAAMAB4AAAACAAAAAAAMAB0AAAACAAAAAAAMABwAAAACAAAAAAAMABsAAAACAAAAAAAMABoAAAACAAAAAAAMABkAAAACAAAAAAAMABgAAAACAAAAAAAMABcAAAACAAAAAAAMABYAAAACAAAAAAAMABUAAAADAAAAAAAMABQAAAACAAAAAAAMABMAAAACAAAAAAAMABIAAAACAAAAAAAMABEAAAACAAAAAAAMABAAAAACAAAAAAAMAA8AAAACAAAAAAAMAA4AAAACAAAAAAAMAA0AAAACAAAAAAANAA4AAAAAAAAAAAAOAA4AAAAAAAAAAAAPAA4AAAAAAAAAAAAQAA4AAAAAAAAAAAARAA4AAAAAAAAAAAASAA4AAAAAAAAAAAATAA4AAAAAAAAAAAAUAA4AAAAAAAAAAAAVAA4AAAAAAAAAAAAWAA4AAAAAAAAAAAAXAA4AAAAAAAAAAAAYAA4AAAAAAAAAAAAZAA4AAAAAAAAAAAAaAA4AAAAAAAAAAAAbAA4AAAAAAAAAAAAcAA4AAAAAAAAAAAAdAA4AAAAAAAAAAAAeAA4AAAAAAAAAAAAfAA4AAAAAAAAAAAAgAA4AAAAAAAAAAAAhAA4AAAAAAAAAAAAiAA4AAAAAAAAAAAAjAA4AAAAAAAAAAAAkAA4AAAAAAAAAAAAlAA4AAAAAAAAAAAAmAA4AAAAAAAAAAAAnAA4AAAAAAAAAAAAoAA4AAAAAAAAAAAApAA4AAAAAAAAAAAAqAA4AAAAAAAAAAAArAA4AAAAAAAAAAAAsAA4AAAAAAAAAAAAtAA4AAAAAAAAAAAAuAA4AAAAAAAAAAAAvAA4AAAAAAAAAAAAaABEAAAAAAAAAAAAaABAAAAAAAAAAAAAaAA8AAAABAAAAAAAZAA8AAAABAAAAAAAYAA8AAAABAAAAAAAXAA8AAAABAAAAAAAWAA8AAAABAAAAAAAVAA8AAAABAAAAAAAUAA8AAAABAAAAAAATAA8AAAABAAAAAAASAA8AAAABAAAAAAARAA8AAAABAAAAAAAQAA8AAAABAAAAAAAPAA8AAAABAAAAAAAOAA8AAAABAAAAAAANAA8AAAAAAAAAAAANABAAAAAAAAAAAAANABEAAAAAAAAAAAANABIAAAAAAAAAAAANABMAAAAAAAAAAAANABQAAAABAAAAAAANABUAAAABAAAAAAANABYAAAAAAAAAAAANABcAAAAAAAAAAAANABgAAAAAAAAAAAANABkAAAAAAAAAAAANABoAAAAAAAAAAAANABsAAAAAAAAAAAANABwAAAAAAAAAAAANAB0AAAAAAAAAAAANAB4AAAAAAAAAAAANAB8AAAAAAAAAAAANACAAAAAAAAAAAAANACEAAAAAAAAAAAAOACEAAAAAAAAAAAAOACAAAAAAAAAAAAAOAB8AAAAAAAAAAAAOAB4AAAAAAAAAAAAOAB0AAAAAAAAAAAAOABwAAAAAAAAAAAAOABsAAAAAAAAAAAAOABoAAAAAAAAAAAAOABkAAAAAAAAAAAAOABgAAAAAAAAAAAAOABcAAAAAAAAAAAAOABYAAAAAAAAAAAAOABUAAAABAAAAAAAOABQAAAABAAAAAAAOABMAAAAAAAAAAAAOABIAAAABAAAAAAAOABEAAAABAAAAAAAOABAAAAABAAAAAAAPABAAAAABAAAAAAAPABEAAAABAAAAAAAPABIAAAABAAAAAAAPABMAAAAAAAAAAAAPABQAAAABAAAAAAAPABUAAAABAAAAAAAPABYAAAAAAAAAAAAPABcAAAAAAAAAAAAPABgAAAAAAAAAAAAPABkAAAAAAAAAAAAPABoAAAAAAAAAAAAPABsAAAAAAAAAAAAPABwAAAABAAAAAAAPAB0AAAABAAAAAAAPAB4AAAABAAAAAAAPAB8AAAAAAAAAAAAPACAAAAAAAAAAAAAPACEAAAAAAAAAAAAQACEAAAAAAAAAAAAQACAAAAAAAAAAAAAQAB8AAAAAAAAAAAAQAB4AAAABAAAAAAAQAB0AAAABAAAAAAAQABwAAAABAAAAAAAQABsAAAAAAAAAAAAQABoAAAAAAAAAAAAQABkAAAAAAAAAAAAQABgAAAAAAAAAAAAQABcAAAAAAAAAAAAQABYAAAAAAAAAAAAQABUAAAABAAAAAAAQABQAAAABAAAAAAAQABMAAAAAAAAAAAAQABIAAAABAAAAAAAQABEAAAABAAAAAAAQABAAAAABAAAAAAARABAAAAABAAAAAAARABEAAAABAAAAAAARABIAAAABAAAAAAARABMAAAAAAAAAAAARABQAAAABAAAAAAARABUAAAABAAAAAAARABYAAAAAAAAAAAARABcAAAAAAAAAAAARABgAAAAAAAAAAAARABkAAAAAAAAAAAARABoAAAAAAAAAAAARABsAAAAAAAAAAAARABwAAAABAAAAAAARAB0AAAABAAAAAAARAB4AAAABAAAAAAARAB8AAAAAAAAAAAARACAAAAAAAAAAAAARACEAAAAAAAAAAAASACEAAAAAAAAAAAASACAAAAAAAAAAAAASAB8AAAAAAAAAAAASAB4AAAABAAAAAAASAB0AAAABAAAAAAASABwAAAABAAAAAAASABsAAAAAAAAAAAASABoAAAAAAAAAAAASABkAAAAAAAAAAAASABgAAAAAAAAAAAASABcAAAAAAAAAAAASABYAAAAAAAAAAAASABUAAAABAAAAAAASABQAAAABAAAAAAASABMAAAAAAAAAAAASABIAAAABAAAAAAASABEAAAABAAAAAAASABAAAAABAAAAAAATABAAAAABAAAAAAATABEAAAABAAAAAAATABIAAAABAAAAAAATABMAAAAAAAAAAAATABQAAAABAAAAAAATABUAAAABAAAAAAATABYAAAABAAAAAAATABcAAAABAAAAAAATABgAAAABAAAAAAATABkAAAABAAAAAAATABoAAAABAAAAAAATABsAAAABAAAAAAATABwAAAABAAAAAAATAB0AAAABAAAAAAATAB4AAAABAAAAAAATAB8AAAABAAAAAAATACAAAAAAAAAAAAATACEAAAAAAAAAAAAUACEAAAAAAAAAAAAUACAAAAABAAAAAAAUAB8AAAABAAAAAAAUAB4AAAABAAAAAAAUAB0AAAABAAAAAAAUABwAAAABAAAAAAAUABsAAAABAAAAAAAUABoAAAABAAAAAAAUABkAAAABAAAAAAAUABgAAAABAAAAAAAUABcAAAABAAAAAAAUABYAAAABAAAAAAAUABUAAAABAAAAAAAUABQAAAABAAAAAAAUABMAAAABAAAAAAAUABIAAAABAAAAAAAUABEAAAABAAAAAAAUABAAAAABAAAAAAAVABAAAAABAAAAAAAVABEAAAABAAAAAAAVABIAAAABAAAAAAAVABMAAAABAAAAAAAVABQAAAABAAAAAAAVABUAAAABAAAAAAAVABYAAAABAAAAAAAVABcAAAABAAAAAAAVABgAAAABAAAAAAAVABkAAAABAAAAAAAVABoAAAABAAAAAAAVABsAAAABAAAAAAAVABwAAAABAAAAAAAVAB0AAAABAAAAAAAVAB4AAAABAAAAAAAVAB8AAAABAAAAAAAVACAAAAABAAAAAAAVACEAAAAAAAAAAAAWACEAAAAAAAAAAAAWACAAAAABAAAAAAAWAB8AAAAAAAAAAAAWAB4AAAAAAAAAAAAWAB0AAAAAAAAAAAAWABwAAAAAAAAAAAAWABsAAAAAAAAAAAAWABoAAAAAAAAAAAAWABkAAAAAAAAAAAAWABgAAAAAAAAAAAAWABcAAAAAAAAAAAAWABYAAAAAAAAAAAAWABUAAAABAAAAAAAWABQAAAABAAAAAAAWABMAAAABAAAAAAAWABIAAAABAAAAAAAWABEAAAABAAAAAAAWABAAAAABAAAAAAAXABAAAAAAAAAAAAAXABEAAAAAAAAAAAAXABIAAAAAAAAAAAAXABMAAAAAAAAAAAAXABQAAAABAAAAAAAXABUAAAABAAAAAAAXABYAAAAAAAAAAAAXABcAAAAAAAAAAAAXABgAAAAAAAAAAAAXABkAAAAAAAAAAAAXABoAAAAAAAAAAAAXABsAAAAAAAAAAAAXABwAAAAAAAAAAAAXAB0AAAAAAAAAAAAXAB4AAAAAAAAAAAAXAB8AAAAAAAAAAAAXACAAAAABAAAAAAAXACEAAAAAAAAAAAAYACEAAAAAAAAAAAAYACAAAAABAAAAAAAYAB8AAAAAAAAAAAAYAB4AAAAAAAAAAAAYAB0AAAAAAAAAAAAYABwAAAAAAAAAAAAYABsAAAAAAAAAAAAYABoAAAAAAAAAAAAYABkAAAAAAAAAAAAYABgAAAAAAAAAAAAYABcAAAAAAAAAAAAYABYAAAAAAAAAAAAYABUAAAABAAAAAAAYABQAAAABAAAAAAAYABMAAAAAAAAAAAAYABIAAAAAAAAAAAAYABEAAAAAAAAAAAAYABAAAAAAAAAAAAAZABAAAAAAAAAAAAAZABEAAAAAAAAAAAAZABIAAAAAAAAAAAAZABMAAAAAAAAAAAAZABQAAAABAAAAAAAZABUAAAABAAAAAAAZABYAAAABAAAAAAAZABcAAAABAAAAAAAZABgAAAABAAAAAAAZABkAAAABAAAAAAAZABoAAAABAAAAAAAZABsAAAABAAAAAAAZABwAAAABAAAAAAAZAB0AAAABAAAAAAAZAB4AAAABAAAAAAAZAB8AAAABAAAAAAAZACAAAAABAAAAAAAZACEAAAAAAAAAAAAaACEAAAAAAAAAAAAaACAAAAABAAAAAAAaAB8AAAABAAAAAAAaAB4AAAABAAAAAAAaAB0AAAABAAAAAAAaABwAAAABAAAAAAAaABsAAAABAAAAAAAaABoAAAABAAAAAAAaABkAAAABAAAAAAAaABgAAAABAAAAAAAaABcAAAABAAAAAAAaABYAAAABAAAAAAAaABUAAAABAAAAAAAaABQAAAABAAAAAAAaABMAAAAAAAAAAAAaABIAAAAAAAAAAAAbABIAAAAAAAAAAAAbABEAAAAAAAAAAAAbABAAAAAAAAAAAAAbAA8AAAABAAAAAAAcAA8AAAABAAAAAAAcABAAAAAAAAAAAAAcABEAAAAAAAAAAAAcABIAAAAAAAAAAAAcABMAAAAAAAAAAAAbABMAAAAAAAAAAAAbABQAAAABAAAAAAAbABUAAAABAAAAAAAbABYAAAABAAAAAAAbABcAAAABAAAAAAAbABgAAAABAAAAAAAbABkAAAABAAAAAAAbABoAAAABAAAAAAAbABsAAAABAAAAAAAbABwAAAABAAAAAAAbAB0AAAABAAAAAAAbAB4AAAABAAAAAAAbAB8AAAABAAAAAAAbACAAAAAAAAAAAAAbACEAAAAAAAAAAAAcACEAAAAAAAAAAAAcACAAAAAAAAAAAAAcAB8AAAAAAAAAAAAcAB4AAAAAAAAAAAAcAB0AAAABAAAAAAAcABwAAAABAAAAAAAcABsAAAABAAAAAAAcABoAAAABAAAAAAAcABkAAAAAAAAAAAAcABgAAAAAAAAAAAAcABcAAAAAAAAAAAAcABYAAAAAAAAAAAAcABUAAAABAAAAAAAcABQAAAABAAAAAAAdABQAAAABAAAAAAAdABMAAAAAAAAAAAAdABIAAAAAAAAAAAAdABEAAAAAAAAAAAAdABAAAAAAAAAAAAAdAA8AAAABAAAAAAAeAA8AAAABAAAAAAAeABAAAAAAAAAAAAAeABEAAAAAAAAAAAAeABIAAAAAAAAAAAAeABMAAAAAAAAAAAAeABQAAAABAAAAAAAeABUAAAABAAAAAAAdABUAAAABAAAAAAAdABYAAAAAAAAAAAAdABcAAAAAAAAAAAAdABgAAAAAAAAAAAAdABkAAAAAAAAAAAAdABoAAAABAAAAAAAdABsAAAABAAAAAAAdABwAAAABAAAAAAAdAB0AAAABAAAAAAAdAB4AAAAAAAAAAAAdAB8AAAAAAAAAAAAdACAAAAAAAAAAAAAdACEAAAAAAAAAAAAeACEAAAAAAAAAAAAeACAAAAAAAAAAAAAeAB8AAAAAAAAAAAAeAB4AAAAAAAAAAAAeAB0AAAABAAAAAAAeABwAAAABAAAAAAAeABsAAAABAAAAAAAeABoAAAABAAAAAAAeABkAAAAAAAAAAAAeABgAAAAAAAAAAAAeABcAAAAAAAAAAAAeABYAAAAAAAAAAAAfABYAAAABAAAAAAAfABUAAAABAAAAAAAfABQAAAABAAAAAAAfABMAAAABAAAAAAAfABIAAAABAAAAAAAfABEAAAABAAAAAAAfABAAAAAAAAAAAAAfAA8AAAABAAAAAAAgAA8AAAABAAAAAAAgABAAAAAAAAAAAAAgABEAAAABAAAAAAAgABIAAAABAAAAAAAgABMAAAABAAAAAAAgABQAAAABAAAAAAAgABUAAAABAAAAAAAgABYAAAABAAAAAAAgABcAAAABAAAAAAAfABcAAAABAAAAAAAfABgAAAABAAAAAAAfABkAAAAAAAAAAAAfABoAAAABAAAAAAAfABsAAAABAAAAAAAfABwAAAABAAAAAAAfAB0AAAABAAAAAAAfAB4AAAABAAAAAAAfAB8AAAABAAAAAAAfACAAAAABAAAAAAAfACEAAAABAAAAAAAgACEAAAAAAAAAAAAgACAAAAAAAAAAAAAgAB8AAAAAAAAAAAAgAB4AAAAAAAAAAAAgAB0AAAABAAAAAAAgABwAAAABAAAAAAAgABsAAAABAAAAAAAgABoAAAABAAAAAAAgABkAAAAAAAAAAAAgABgAAAABAAAAAAAhABgAAAABAAAAAAAhABcAAAABAAAAAAAhABYAAAABAAAAAAAhABUAAAABAAAAAAAhABQAAAABAAAAAAAhABMAAAABAAAAAAAhABIAAAABAAAAAAAhABEAAAABAAAAAAAhABAAAAAAAAAAAAAhAA8AAAABAAAAAAAiAA8AAAABAAAAAAAiABAAAAAAAAAAAAAiABEAAAABAAAAAAAiABIAAAABAAAAAAAiABMAAAABAAAAAAAiABQAAAABAAAAAAAiABUAAAABAAAAAAAiABYAAAABAAAAAAAiABcAAAABAAAAAAAiABgAAAABAAAAAAAiABkAAAAAAAAAAAAhABkAAAAAAAAAAAAhABoAAAABAAAAAAAhABsAAAABAAAAAAAhABwAAAABAAAAAAAhAB0AAAABAAAAAAAhAB4AAAABAAAAAAAhAB8AAAABAAAAAAAhACAAAAABAAAAAAAhACEAAAABAAAAAAAiACEAAAAAAAAAAAAiACAAAAAAAAAAAAAiAB8AAAAAAAAAAAAiAB4AAAAAAAAAAAAiAB0AAAABAAAAAAAiABwAAAABAAAAAAAiABsAAAABAAAAAAAiABoAAAABAAAAAAAjABoAAAABAAAAAAAjABkAAAAAAAAAAAAjABgAAAAAAAAAAAAjABcAAAAAAAAAAAAjABYAAAAAAAAAAAAjABUAAAAAAAAAAAAjABQAAAAAAAAAAAAjABMAAAAAAAAAAAAjABIAAAAAAAAAAAAjABEAAAAAAAAAAAAjABAAAAAAAAAAAAAjAA8AAAABAAAAAAAkAA8AAAABAAAAAAAkABAAAAAAAAAAAAAkABEAAAAAAAAAAAAkABIAAAAAAAAAAAAkABMAAAAAAAAAAAAkABQAAAAAAAAAAAAkABUAAAAAAAAAAAAkABYAAAAAAAAAAAAkABcAAAAAAAAAAAAkABgAAAAAAAAAAAAkABkAAAAAAAAAAAAkABoAAAABAAAAAAAkABsAAAABAAAAAAAjABsAAAABAAAAAAAjABwAAAABAAAAAAAjAB0AAAABAAAAAAAjAB4AAAABAAAAAAAjAB8AAAABAAAAAAAjACAAAAABAAAAAAAjACEAAAAAAAAAAAAkACEAAAAAAAAAAAAkACAAAAABAAAAAAAkAB8AAAABAAAAAAAkAB4AAAABAAAAAAAkAB0AAAABAAAAAAAkABwAAAABAAAAAAAlABwAAAABAAAAAAAlABsAAAABAAAAAAAlABoAAAABAAAAAAAlABkAAAABAAAAAAAlABgAAAABAAAAAAAlABcAAAABAAAAAAAlABYAAAABAAAAAAAlABUAAAABAAAAAAAlABQAAAABAAAAAAAlABMAAAABAAAAAAAlABIAAAABAAAAAAAlABEAAAAAAAAAAAAlABAAAAAAAAAAAAAlAA8AAAABAAAAAAAmAA8AAAABAAAAAAAmABAAAAAAAAAAAAAmABEAAAAAAAAAAAAmABIAAAABAAAAAAAmABMAAAABAAAAAAAmABQAAAABAAAAAAAmABUAAAABAAAAAAAmABYAAAABAAAAAAAmABcAAAABAAAAAAAmABgAAAABAAAAAAAmABkAAAABAAAAAAAmABoAAAABAAAAAAAmABsAAAABAAAAAAAmABwAAAABAAAAAAAmAB0AAAABAAAAAAAlAB0AAAABAAAAAAAlAB4AAAAAAAAAAAAlAB8AAAABAAAAAAAlACAAAAABAAAAAAAlACEAAAAAAAAAAAAmACEAAAAAAAAAAAAmACAAAAABAAAAAAAmAB8AAAABAAAAAAAmAB4AAAAAAAAAAAAnAB4AAAAAAAAAAAAnAB0AAAABAAAAAAAnABwAAAABAAAAAAAnABsAAAABAAAAAAAnABoAAAABAAAAAAAnABkAAAABAAAAAAAnABgAAAABAAAAAAAnABcAAAABAAAAAAAnABYAAAABAAAAAAAnABUAAAABAAAAAAAnABQAAAABAAAAAAAnABMAAAABAAAAAAAnABIAAAABAAAAAAAnABEAAAAAAAAAAAAnABAAAAAAAAAAAAAnAA8AAAABAAAAAAAoAA8AAAABAAAAAAAoABAAAAAAAAAAAAAoABEAAAAAAAAAAAAoABIAAAAAAAAAAAAoABMAAAAAAAAAAAAoABQAAAAAAAAAAAAoABUAAAAAAAAAAAAoABYAAAAAAAAAAAAoABcAAAAAAAAAAAAoABgAAAAAAAAAAAAoABkAAAAAAAAAAAAoABoAAAABAAAAAAAoABsAAAABAAAAAAAoABwAAAABAAAAAAAoAB0AAAABAAAAAAAoAB4AAAAAAAAAAAAoAB8AAAABAAAAAAAnAB8AAAABAAAAAAAnACAAAAABAAAAAAAnACEAAAAAAAAAAAAoACEAAAAAAAAAAAAoACAAAAABAAAAAAApACAAAAABAAAAAAApAB8AAAABAAAAAAApAB4AAAAAAAAAAAApAB0AAAABAAAAAAApABwAAAABAAAAAAApABsAAAABAAAAAAApABoAAAABAAAAAAApABkAAAAAAAAAAAApABgAAAAAAAAAAAApABcAAAAAAAAAAAApABYAAAAAAAAAAAApABUAAAAAAAAAAAApABQAAAAAAAAAAAApABMAAAAAAAAAAAApABIAAAAAAAAAAAApABEAAAAAAAAAAAApABAAAAAAAAAAAAApAA8AAAABAAAAAAAqAA8AAAABAAAAAAAqABAAAAABAAAAAAAqABEAAAABAAAAAAAqABIAAAABAAAAAAAqABMAAAABAAAAAAAqABQAAAABAAAAAAAqABUAAAABAAAAAAAqABYAAAABAAAAAAAqABcAAAABAAAAAAAqABgAAAABAAAAAAAqABkAAAAAAAAAAAAqABoAAAABAAAAAAAqABsAAAABAAAAAAAqABwAAAABAAAAAAAqAB0AAAABAAAAAAAqAB4AAAAAAAAAAAAqAB8AAAABAAAAAAAqACAAAAABAAAAAAAqACEAAAAAAAAAAAApACEAAAAAAAAAAAArACEAAAAAAAAAAAArACAAAAABAAAAAAArAB8AAAABAAAAAAArAB4AAAAAAAAAAAArAB0AAAAAAAAAAAArABwAAAAAAAAAAAArABsAAAAAAAAAAAArABoAAAAAAAAAAAArABkAAAAAAAAAAAArABgAAAABAAAAAAArABcAAAABAAAAAAArABYAAAABAAAAAAArABUAAAABAAAAAAArABQAAAABAAAAAAArABMAAAABAAAAAAArABIAAAABAAAAAAArABEAAAABAAAAAAArABAAAAABAAAAAAArAA8AAAABAAAAAAAsAA8AAAABAAAAAAAsABAAAAABAAAAAAAsABEAAAABAAAAAAAsABIAAAABAAAAAAAsABMAAAABAAAAAAAsABQAAAABAAAAAAAsABUAAAABAAAAAAAsABYAAAABAAAAAAAsABcAAAABAAAAAAAsABgAAAABAAAAAAAsABkAAAAAAAAAAAAsABoAAAAAAAAAAAAsABsAAAAAAAAAAAAsABwAAAAAAAAAAAAsAB0AAAAAAAAAAAAsAB4AAAAAAAAAAAAsAB8AAAAAAAAAAAAsACAAAAAAAAAAAAAsACEAAAAAAAAAAAAtACEAAAAAAAAAAAAtACAAAAAAAAAAAAAtAB8AAAABAAAAAAAtAB4AAAAAAAAAAAAtAB0AAAABAAAAAAAtABwAAAABAAAAAAAtABsAAAABAAAAAAAtABoAAAABAAAAAAAtABkAAAABAAAAAAAtABgAAAABAAAAAAAtABcAAAABAAAAAAAtABYAAAABAAAAAAAtABUAAAABAAAAAAAtABQAAAABAAAAAAAtABMAAAABAAAAAAAtABIAAAABAAAAAAAtABEAAAABAAAAAAAtABAAAAABAAAAAAAtAA8AAAABAAAAAAAuAA8AAAAAAAAAAAAuABAAAAAAAAAAAAAuABEAAAAAAAAAAAAuABIAAAAAAAAAAAAuABMAAAAAAAAAAAAuABQAAAAAAAAAAAAuABUAAAAAAAAAAAAuABYAAAAAAAAAAAAuABcAAAAAAAAAAAAuABgAAAABAAAAAAAuABkAAAABAAAAAAAuABoAAAABAAAAAAAuABsAAAABAAAAAAAuABwAAAABAAAAAAAuAB0AAAABAAAAAAAuAB4AAAABAAAAAAAuAB8AAAABAAAAAAAuACAAAAABAAAAAAAuACEAAAABAAAAAAAvACEAAAABAAAAAAAvACAAAAAAAAAAAAAvAB8AAAAAAAAAAAAvAB4AAAAAAAAAAAAvAB0AAAABAAAAAAAvABwAAAABAAAAAAAvABsAAAABAAAAAAAvABoAAAABAAAAAAAvABkAAAABAAAAAAAvABgAAAABAAAAAAAvABcAAAAAAAAAAAAvABYAAAAAAAAAAAAvABUAAAAAAAAAAAAvABQAAAAAAAAAAAAvABMAAAAAAAAAAAAvABIAAAAAAAAAAAAvABEAAAAAAAAAAAAvABAAAAAAAAAAAAAvAA8AAAAAAAAAAAA=")
tile_set = ExtResource("2_0tnpc")
navigation_enabled = false
script = ExtResource("3_vtaks")
first_tile = Vector2i(-1, -1)
last_tile = Vector2i(16, 9)
arrow_tile_map = NodePath("../ArrowTileMap")

[node name="WallMap" type="TileMapLayer" parent="TileController"]
tile_set = SubResource("TileSet_tdg3v")
navigation_enabled = false

[node name="Spawner" parent="TileController" instance=ExtResource("4_kvpfn")]
unique_name_in_owner = true

[node name="ArrowTileMap" type="TileMapLayer" parent="."]
visible = false
modulate = Color(0.451355, 0.893955, 0.996094, 1)
tile_set = SubResource("TileSet_wuhgg")

[node name="GUILayer" type="CanvasLayer" parent="."]
layer = 2

[node name="GUI" parent="GUILayer" instance=ExtResource("6_kvuet")]
mouse_filter = 2

[node name="ScreenMenuLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 3
script = ExtResource("7_trtic")

[node name="PauseMenu" parent="ScreenMenuLayer" instance=ExtResource("8_ir15t")]
visible = false

[connection signal="restart_requested" from="ScreenMenuLayer/PauseMenu" to="." method="_reset_game"]
